k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-flask-prod-env-service
spec:
  type: LoadBalancer
  selector:
    app: aks-flask-prod-env-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
